# fractal_sugar

./: .gitignore  Cargo.toml  README.md  app_config.toml  audio.rs  build.rs  color_schemes.json  color_schemes.toml  main.rs
engine/: hardware.rs  mod.rs  swapchain.rs
res/: icon.rc
shaders/: entire_view.vert  particles.comp  particles.frag  particles.vert  ray_march.frag
shaders/src/: particles.comp  particles.frag  particles.vert
src/: app_config.rs  app_overlay.rs  audio.rs  color_scheme.rs  config_window.rs  main.rs  my_math.rs  space_filling_curves.rs
src/audio/: mod.rs  space_filling_curves.rs
src/engine/: core.rs  hardware.rs  mod.rs  object.rs  pipeline.rs  renderer.rs  swapchain.rs  utils.rs  vertex.rs
src/my_math/: mod.rs
