[package]
name = "fractal_sugar"
version = "0.1.4"
authors = ["Ryan Andersen <ryco117@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021" # Rust Edition used in this package
build = "build.rs"

[build-dependencies]
embed-resource = "1.7.4"

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.2"
cpal = "0.14.1"
crossbeam-channel = "0.5.6"
css-color-parser = "0.1.2"
egui = "0.19.0"
egui_winit_vulkano = "0.21.0"
ico = "0.2.0"
rustfft = "6.0.1"
serde = { version = "1.0.143", features = ["derive"] }
toml = "0.5.8"
vulkano = "0.32.0"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.5"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = true
strip = true
panic = "abort"

[[bin]]
name = "fractal_sugar"
path = "src/main.rs"
