[package]
name = "fractal_sugar"
version = "0.1.8"
authors = ["Ryan Andersen <ryco117@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021" # Rust Edition used in this package
build = "build.rs"

[build-dependencies]
embed-resource = "2.1.1"

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.13.1"
companion_console = { git = "https://github.com/ryco117/companion_console.git" }
cpal = "0.15.2"
crossbeam-channel = "0.5.8"
css-color-parser = "0.1.2"
egui = "0.21.0"
egui_winit_vulkano = "0.24.0"
ico = "0.3.0"
rustfft = "6.1.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"

[profile.release]
lto = true
strip = true
panic = "abort"

[[bin]]
name = "fractal_sugar"
path = "src/main.rs"
